--- a/src/components/icons/Vercel.astro
+++ b/src/components/icons/Vercel.astro
@@ -1,1 +1,12 @@
-<svg class="w-4 h-4" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" strokeWidth="0"></g><g id="SVGRepo_tracerCarrier" strokeLinecap="round" strokeLinejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M12 1L24 22H0L12 1Z" fill="#000000"></path> </g></svg>
+<svg
+  class="w-4 h-4"
+  viewBox="0 0 24 24"
+  fill="none"
+  xmlns="http://www.w3.org/2000/svg"
+  ><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g
+    id="SVGRepo_tracerCarrier"
+    stroke-linecap="round"
+    stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier">
+    <path d="M12 1L24 22H0L12 1Z" fill="#000000"></path>
+  </g></svg
+>
