--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -77,7 +77,7 @@ const PROJECTS = [
       "MVP para cliente que buscaba una plataforma la cual conecte personas con abogados ofreciendo sus servicios.",
     link: "https://unique-bunny-bf6568.netlify.app/",
     github: "https://github.com/NicoCartellone/LegalVerse",
-    image: "/public/projects/legalverse.webp",
+    image: "../../public/projects/legalverse.webp",
     tags: [TAGS.REACT, TAGS.VITE, TAGS.CSS, TAGS.FIREBASE, TAGS.NETLIFY],
   },
   {
@@ -86,7 +86,7 @@ const PROJECTS = [
       "App barrial para los vecinos puedan alertas situaciones sospechozas o necesidades.",
     link: "",
     github: "https://github.com/NicoCartellone/ConexionBarrialApp",
-    image: "/public/projects/conexion-barrial.webp",
+    image: "../../public/projects/conexion-barrial.webp",
     tags: [TAGS.REACT, TAGS.EXPO, TAGS.FIREBASE],
   },
   {
@@ -95,7 +95,7 @@ const PROJECTS = [
       "Web app que permite a un usuario crear y almacenar sus notas.",
     link: "https://mis-notas-app.netlify.app/login",
     github: "ttps://github.com/NicoCartellone/MisNotas-React-firebase9",
-    image: "/public/projects/tusnotas.webp",
+    image: "../../public/projects/tusnotas.webp",
     tags: [TAGS.REACT, TAGS.VITE, TAGS.TAILWIND, TAGS.FIREBASE, TAGS.NETLIFY],
   },
   {
@@ -104,7 +104,7 @@ const PROJECTS = [
       "Web donde puedes guardar tus películas favoritas y asi saber que pelicula ver en tu proximo finde.",
     link: "https://playful-gingersnap-d771c3.netlify.app/",
     github: "https://github.com/NicoCartellone/PelisApp",
-    image: "/public/projects/tus-peliculas.webp",
+    image: "../../public/projects/tus-peliculas.webp",
     tags: [TAGS.REACT, TAGS.CSS, TAGS.NETLIFY],
   },
   {
@@ -113,7 +113,7 @@ const PROJECTS = [
       "Busca un perfil de github y mira sus repositorios y sus proyectos.",
     link: "https://github-search-eta-puce.vercel.app/",
     github: "https://github.com/NicoCartellone/GithubSearch",
-    image: "/public/projects/devfinder.webp",
+    image: "../../public/projects/devfinder.webp",
     tags: [TAGS.NEXT, TAGS.TYPESCRIPT, TAGS.TAILWIND, TAGS.VERCEL],
   },
   {
@@ -122,7 +122,7 @@ const PROJECTS = [
       "Cotizacion del dólar en tiempo real y conversor de pesos Argentinos a dólares, utilizando una api propia.",
     link: "https://argentina-dolar.netlify.app/",
     github: "https://github.com/NicoCartellone/Dolar-Frontedmentor",
-    image: "/public/projects/dolarapp.webp",
+    image: "../../public/projects/dolarapp.webp",
     tags: [TAGS.NEXT, TAGS.TYPESCRIPT, TAGS.TAILWIND, TAGS.NETLIFY],
   },
   {
@@ -131,7 +131,7 @@ const PROJECTS = [
       "App movil que te permite ver y guardar el clima de tu ciudad y de otras ciudades del mundo.",
     link: "",
     github: "https://github.com/NicoCartellone/AppClima",
-    image: "/public/projects/clima-app.webp",
+    image: "../../public/projects/clima-app.webp",
     tags: [TAGS.REACT, TAGS.EXPO, TAGS.FIREBASE],
   },
   {
@@ -140,7 +140,7 @@ const PROJECTS = [
       "App donde se puede ver la cotización del dólar en tiempo real utilizando una api propia.",
     link: "",
     github: "https://github.com/NicoCartellone/DolarApp",
-    image: "/public/projects/dolar-app.webp",
+    image: "../../public/projects/dolar-app.webp",
     tags: [TAGS.REACT, TAGS.EXPO, TAGS.FIREBASE],
   },
   {
@@ -149,7 +149,7 @@ const PROJECTS = [
       "Api REST utilizando webScrpping para obtener las cotizaciones de los distintos tipos de dólar en Argentna.",
     link: "https://api-dolar-argentina-nu.vercel.app/",
     github: "https://github.com/NicoCartellone/API-DolarArgentina",
-    image: "/public/projects/apirestdolar.webp",
+    image: "../../public/projects/apirestdolar.webp",
     tags: [TAGS.NODEJS, TAGS.VERCEL],
   },
 ];
