--- a/src/components/SocialPill.astro
+++ b/src/components/SocialPill.astro
@@ -5,7 +5,7 @@
     flex justify-center items-center gap-x-2
     py-2 px-4
     text-base
-    text-black/70 dark:text-white/50
+    text-black/70 dark:text-white
     transition
     hover:scale-110 hover:bg-white/10
   `}
