--- a/src/components/ProjectsSection.astro
+++ b/src/components/ProjectsSection.astro
@@ -2,7 +2,7 @@
 import Projects from "../components/Projects.astro";
 ---
 
-<section id="projects" class="body-font scroll-mt-28">
+<section id="projects" class="body-font scroll-mt-28 mt-10">
   <h2
     class="title-font sm:text-4xl text-3xl font-medium text-black text-center dark:text-white"
   >
