change: delete border in project card & fix hero serction

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -25,7 +25,7 @@ import CVpdf from '../../public/CV.pdf'
       class="lg:flex-grow md:w-2/2 md:flex-col flex flex-col md:items-start lg:ml-20 lg:text-start text-center"
     >
       <h1
-        class="text-gray-900 dark:text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10 justify-center"
+        class="text-gray-900 dark:text-white text-3xl md:text-4xl lg:text-5xl font-bold pb-6 lg:pb-10 text-center md:text-left"
       >
         Hola, soy Nicolás Cartellone
       </h1>
