--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -167,7 +167,7 @@ const PROJECTS = [
 {
   PROJECTS.map(({ image, title, description, tags, github, link }) => (
     <article class="p-4 md:w-1/3">
-      <div class="h-full border-2 dark:border-gray-800 border-black/15 rounded-lg overflow-hidden">
+      <div class="h-full rounded-lg overflow-hidden">
         <div class="rounded-lg h-64 overflow-hidden">
           <img
             alt={`${image}photo`}
@@ -179,7 +179,7 @@ const PROJECTS = [
           <h3 class="title-font text-lg font-medium text-black dark:text-white mb-3">
             {title}
           </h3>
-          <p class="leading-relaxed mb-3">{description}</p>
+          <p class="leading-relaxed mb-3 text-gray-700 dark:text-gray-300">{description}</p>
           <ul class="flex gap-x-2 flex-row mb-5 flex-wrap gap-y-2">
             {tags.map((tag) => (
               <li>
